@@ -17,6 +17,13 @@ Version 3.2.0 - in development
 - Discontinued support for Python 3.6, 3.7, and 3.8. Reworked portions of the
   packrat cache to leverage insertion-preserving ordering in dicts.
 
+- Fixed code in `ParseElementEnhance` subclasses that replaced detailed
+  exception messages raised in contained expressions with a less-specific and
+  less-informative generic exception message and location.
+  POSSIBLE BREAKING CHANGE: If your code has conditional logic based on the
+  the message content in raised `ParseExceptions`, this bugfix may break your
+  code.
+
 - Added `lox_parser.py` example, a parser for the Lox language used as a tutorial in
   Robert Nystrom's "Crafting Interpreters" (http://craftinginterpreters.com/)
 
